# Open-Agents

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LESSONS.md  LICENSE  LOCAL-LLM-INTEGRATION.md  MASTERPLAN.md  MIGRATION-VSCODE-BRIDGE.md  OPEN-QUESTIONS.md  Open-Agents.code-workspace  PRINCIPLES.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  SOURCES.md  claude-code-agentic-layer.html  claude-code-agentic-layer.md  openagents-plan.md  package.json  pi-dev-onderzoek-compleet.md  pi-dev-ultieme-gids.html  pnpm-lock.yaml
oa-cli/: .gitignore  pyproject.toml
oa-cli/scripts/: oa-status.sh
oa-cli/src/open_agents/: __init__.py  auto_manager.py  bridge.py  chat.py  cli.py  config.py  dashboard.py  lifecycle.py  messaging.py  monitor.py  orchestrator.py  pipeline.py  preflight.py  spawner.py  state.py  tmux.py  utils.py  workspace.py
oa-cli/tests/: test_auto_manager.py  test_chat.py  test_orchestrator.py  test_preflight.py  test_state.py  test_workspace.py
oa-cli/web/: index.html  package-lock.json  package.json  vite.config.ts
oa-cli/web/src/: App.tsx  index.css
oa-cli/web/src/api/: client.ts
oa-cli/web/src/components/builder/: BuilderTab.tsx  FlowCanvas.tsx  NodePalette.tsx
oa-cli/web/src/components/context/: ContextTab.tsx  ContextWorkspace.tsx
oa-cli/web/src/components/dashboard/: ActivityFeed.tsx  AgentDetail.tsx  AgentList.tsx  AgentPanel.tsx  DashboardTab.tsx  LiveCanvas.tsx  SpawnForm.tsx  SystemHealth.tsx
oa-cli/web/src/components/layout/: Header.tsx  TabBar.tsx
oa-cli/web/src/components/settings/: ApiKeyManager.tsx  ModelConfig.tsx  SettingsTab.tsx
oa-cli/web/src/components/shared/: Card.tsx  EmptyState.tsx  ModelBadge.tsx  (+2 more)
oa-cli/web/src/stores/: agentStore.ts  contextStore.ts  settingsStore.ts  templateStore.ts  uiStore.ts
oa-cli/web/src/types/: index.ts
(+77 files in other folders)
