[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-agents-cli"
version = "0.2.0"
description = "CLI orchestrator for multi-agent Claude Code sessions via tmux"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "textual>=0.80",
    "flask>=3.0",
    "flask-cors>=5.0",
    "prompt_toolkit>=3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/FreekHeijting/Open-Agents"
Repository = "https://github.com/FreekHeijting/Open-Agents"
"Bug Tracker" = "https://github.com/FreekHeijting/Open-Agents/issues"

[project.scripts]
oa = "open_agents.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
